# aoc-2023

./: .gitignore  README.md
haskell/: ac01.hs  ac02.hs  ac03.hs  ac04.hs  ac05.hs  ac06.hs  ac07.hs  ac08.hs  ac09.hs  ac10.hs  ac11.hs  ac12.hs  ac13.hs  ac14.hs  ac15.hs
ocaml/: AC04.ml  AC06.ml  AC08.ml  AC09.ml  AC10.ml  AC11.ml  AC12.ml  AC13.ml  AC14.ml  AC15.ml  AC16.ml  AC17.ml  AC18.ml  AC19.ml  AC20.ml  AC21.ml  AC22.ml  AC23.ml  AC24.ml  AC25.ml  dune
ocaml/01/: dune
ocaml/02/: AC02.ml  dune
ocaml/03/: AC03.ml  dune
ocaml/04/: dune
ocaml/05/: AC05.ml  dune
ocaml/06/: AC06.ml  dune
ocaml/07/: dune
ocaml/08/: dune
ocaml/1/: AC1.ml  dune
ocaml/2/: dune
ocaml/3/: dune
ocaml/4/: dune
ocaml/6/: dune
ocaml/7/: AC7.ml
ocaml/common/: common.ml  dune
rust/: Cargo.toml
rust/src/: lib.rs
