(executable
  (name AC01)
  (modules AC01)
  (libraries common))
(executable
  (name AC02)
  (modules AC02)
  (libraries common))
(executable
  (name AC03)
  (modules AC03)
  (libraries common))
(executable
  (name AC04)
  (modules AC04)
  (libraries common))
(executable
  (name AC05)
  (modules AC05)
  (libraries common))
(executable
  (name AC06)
  (modules AC06)
  (libraries common))
(executable
  (name AC07)
  (modules AC07)
  (libraries common))
(executable
  (name AC08)
  (modules AC08)
  (libraries common))
(executable
  (name AC09)
  (modules AC09)
  (libraries common))
(executable
  (name AC10)
  (modules AC10)
  (libraries common))
(executable
  (name AC11)
  (modules AC11)
  (libraries common))
(executable
  (name AC12)
  (modules AC12)
  (libraries common))
(executable
  (name AC13)
  (modules AC13)
  (libraries common))
(executable
  (name AC14)
  (modules AC14)
  (libraries common))
(executable
  (name AC15)
  (modules AC15)
  (libraries common))
(executable
  (name AC16)
  (modules AC16)
  (libraries common))
(executable
  (name AC17)
  (modules AC17)
  (libraries common))
(executable
  (name AC18)
  (modules AC18)
  (libraries common))
(executable
  (name AC19)
  (modules AC19)
  (libraries common))
(executable
  (name AC20)
  (modules AC20)
  (libraries common))
(executable
  (name AC21)
  (modules AC21)
  (libraries common))
(executable
  (name AC22)
  (modules AC22)
  (libraries common))
(executable
  (name AC23)
  (modules AC23)
  (libraries common))
(executable
  (name AC24)
  (modules AC24)
  (libraries common))
(executable
  (name AC25)
  (modules AC25)
  (libraries common))
